cart-previe (nutnost dořešit responzivitu)

--- a/index.html
+++ b/index.html
@@ -157,8 +157,55 @@
                             <a class="btn wishlist-btn" href=""><i class=" mr-2 fas fa-heart"><div class="product-circle-number wishlist-circle">5</div></i></a>
                             <div class="dropdown cart-dropdown">
                                 <a class="btn cart-btn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-shopping-cart"><div class="product-circle-number cart-circle">1</div> </i></a>
-                                <div class="dropdown-menu" aria-labelledby="my-dropdown">
-                      
+                                <div class="dropdown-menu cart-dropdown-menu" aria-labelledby="my-dropdown">
+                                    <div class="container-fluid">
+                                        <!--One item in cart preview-->
+                                        <div class="row cart-dropdown-item">
+                                            <div class="col-4 cart-menu-photo">
+                                                <img class="img-fluid" src="images/product.jpg" alt="">
+                                            </div>
+                                            <div class="col-6 cart-menu-product">
+                                                <a class="cart-menu-product-name" href="#"><h5>Nějaký úžasný název produktu</h5></a>
+                                                <div class="cart-menu-product-descript">Lorem ipsum dolor sit, amet </div>
+                                                <div class="cart-menu-product-price"> <span class="quantity">2</span> x <span class="price"> <strong>1000 CZK</strong> </span> </div>
+                                            </div>
+                                            <div class="col-2 cart-dropdown-cancel">
+                                                <a href="#"> <i class="fas fa-times"></i> </a>
+                                            </div>
+                                        </div>
+                                        <!--One item in cart preview-->
+
+
+                                        <div class="dropdown-divider"></div>
+                                        <div class="row cart-dropdown-item">
+                                            <div class="col-4 cart-menu-photo">
+                                                <img class="img-fluid" src="images/product.jpg" alt="">
+                                            </div>
+                                            <div class="col-6 cart-menu-product">
+                                                <a class="cart-menu-product-name" href="#"><h5>Nějaký úžasný název produktu</h5></a>
+                                                <div class="cart-menu-product-descript">Lorem ipsum dolor sit, amet </div>
+                                                <div class="cart-menu-product-price"> <span class="quantity">2</span> x <span class="price"> <strong>1000 CZK</strong> </span> </div>
+                                            </div>
+                                            <div class="col-2 cart-dropdown-cancel">
+                                                <a href="#"> <i class="fas fa-times"></i> </a>
+                                            </div>
+                                        </div>
+
+                                        <div class="dropdown-divider"></div>
+                                        <div class="row cart-dropdown-item">
+                                            <div class="col-4 cart-menu-photo">
+                                                <img class="img-fluid" src="images/product.jpg" alt="">
+                                            </div>
+                                            <div class="col-6 cart-menu-product">
+                                                <a class="cart-menu-product-name" href="#"><h5>Nějaký úžasný název produktu</h5></a>
+                                                <div class="cart-menu-product-descript">Lorem ipsum dolor sit, amet </div>
+                                                <div class="cart-menu-product-price"> <span class="quantity">2</span> x <span class="price"> <strong>1000 CZK</strong> </span> </div>
+                                            </div>
+                                            <div class="col-2 cart-dropdown-cancel">
+                                                <a href="#"> <i class="fas fa-times"></i> </a>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
