Karty - Populární kategorie (homepage)
Plně responzivní karty populárních kategorií.

--- a/index.html
+++ b/index.html
@@ -1036,7 +1036,7 @@
             </article>
 
             <!--Bestsellers article-->
-            <article class="featured-products">
+            <article class="bestsellers-products">
                 <div class="container mt-5 mb-5">
                     <div class="row">
                         <div class="col-12">
@@ -1288,6 +1288,89 @@
                                             </div>
                                         </div>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+
+            <!--Popolar categories article-->
+            <article class="popular-categories">
+                <div class="container mt-5 mb-5">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="title-with-divider">
+                            <h3>Populární kategorie</h3>
+                            <div class="divider"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row categories-card-row card-version-two">
+                        <div class="col-6 col-lg-4 pl-0 mt-3  one categories-card">
+                            <div class="categories-card-wrapper">
+                                <div class="categories-card-image-wrapper">
+                                    <div class="categories-card-image"></div>
+                                </div>
+                                <div class="categories-card-info">
+                                    <div class="categories-card-title"> <a href="#"> Power tools </a> </div>
+                                    <div class="categories-card-text"> 500 produktů </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 col-lg-4 pl-0 mt-3 categories-card two">
+                            <div class="categories-card-wrapper">
+                                <div class="categories-card-image-wrapper">
+                                    <div class="categories-card-image"></div>
+                                </div>
+                                <div class="categories-card-info">
+                                    <div class="categories-card-title"> <a href="#"> Power tools </a> </div>
+                                    <div class="categories-card-text"> 500 produktů </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 col-lg-4 pl-0 mt-3  categories-card three">
+                            <div class="categories-card-wrapper">
+                                <div class="categories-card-image-wrapper">
+                                    <div class="categories-card-image"></div>
+                                </div>
+                                <div class="categories-card-info">
+                                    <div class="categories-card-title"> <a href="#"> Power tools </a> </div>
+                                    <div class="categories-card-text"> 500 produktů </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 col-lg-4 pl-0 mt-3  one categories-card">
+                            <div class="categories-card-wrapper">
+                                <div class="categories-card-image-wrapper">
+                                    <div class="categories-card-image"></div>
+                                </div>
+                                <div class="categories-card-info">
+                                    <div class="categories-card-title"> <a href="#"> Power tools </a> </div>
+                                    <div class="categories-card-text"> 500 produktů </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 col-lg-4 pl-0 mt-3 categories-card two">
+                            <div class="categories-card-wrapper">
+                                <div class="categories-card-image-wrapper">
+                                    <div class="categories-card-image"></div>
+                                </div>
+                                <div class="categories-card-info">
+                                    <div class="categories-card-title"> <a href="#"> Power tools </a> </div>
+                                    <div class="categories-card-text"> 500 produktů </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 col-lg-4 pl-0 mt-3  categories-card three">
+                            <div class="categories-card-wrapper">
+                                <div class="categories-card-image-wrapper">
+                                    <div class="categories-card-image"></div>
+                                </div>
+                                <div class="categories-card-info">
+                                    <div class="categories-card-title"> <a href="#"> Power tools </a> </div>
+                                    <div class="categories-card-text"> 500 produktů </div>
                                 </div>
                             </div>
                         </div>
