--- a/index.html
+++ b/index.html
@@ -361,8 +361,6 @@
             </nav>
         </div>
       </header>
-
-
       <main>
         <!--Homepage welcome section with carousel-->
         <section class="homepage-header w-100">
@@ -388,28 +386,28 @@
                     </div>
 
                     <div class="row homepage-card-row card-version-one">
-                        <div class="col-6 col-lg-3 pr-0 pl-3 homepage-card one">
+                        <div class="col-12 col-md-6 col-sm-6 col-lg-3 pr-3 pr-sm-0 pr-md-0 pr-lg-0 pl-3 homepage-card one">
                             <div class="homepage-card-wrapper">
                                 <div class="homepage-card-image"></div>
                                 <div class="homepage-card-title"> Doprava zdarma</div>
                                 <div class="homepage-card-text"> Pro objednávky nad 1000 CZK </div>
                             </div>
                         </div>
-                        <div class="col-6 col-lg-3 pr-lg-0 pl-0   homepage-card two">
+                        <div class="col-12 col-md-6 col-sm-6 col-lg-3 pr-lg-0 pl-3 pl-lg-0 pl-md-0 pl-sm-0   homepage-card two">
                             <div class="homepage-card-wrapper">
                                 <div class="homepage-card-image"></div>
                                 <div class="homepage-card-title"> Doprava zdarma</div>
                                 <div class="homepage-card-text"> Pro objednávky nad 1000 CZK </div>
                             </div>
                         </div>
-                        <div class="col-6 col-lg-3 pl-lg-0 pr-0 homepage-card three">
+                        <div class="col-12 col-md-6 col-sm-6 col-lg-3 pl-lg-0 pr-3 pr-sm-0 pr-md-0 pr-lg-0 homepage-card three">
                             <div class="homepage-card-wrapper">
                                 <div class="homepage-card-image"></div>
                                 <div class="homepage-card-title"> Doprava zdarma</div>
                                 <div class="homepage-card-text"> Pro objednávky nad 1000 CZK </div>
                             </div>
                         </div>
-                        <div class="col-6 col-lg-3 pl-0  homepage-card four">
+                        <div class="col-12 col-md-6 col-sm-6 col-lg-3 pl-3 pl-lg-0 pl-md-0 pl-sm-0  homepage-card four">
                             <div class="homepage-card-wrapper">
                                 <div class="homepage-card-image"></div>
                                 <div class="homepage-card-title"> Doprava zdarma</div>
@@ -420,28 +418,28 @@
 
                     <!--Druhá verze--
                     <div class="row homepage-card-row card-version-two">
-                        <div class="col-6 col-lg-3 pr-lg-4 mt-3 one homepage-card">
+                        <div class="col-12 col-sm-6 col-md-6 col-lg-3 pr-lg-4 mt-3 one homepage-card">
                             <div class="homepage-card-wrapper">
                                 <div class="homepage-card-image"></div>
                                 <div class="homepage-card-title"> Doprava zdarma</div>
                                 <div class="homepage-card-text"> Pro objednávky nad 1000 CZK </div>
                             </div>
                         </div>
-                        <div class="col-6 col-lg-3 mt-3 homepage-card two">
+                        <div class="col-12 col-sm-6 col-md-6 col-lg-3 mt-3 homepage-card two">
                             <div class="homepage-card-wrapper">
                                 <div class="homepage-card-image"></div>
                                 <div class="homepage-card-title"> Doprava zdarma</div>
                                 <div class="homepage-card-text"> Pro objednávky nad 1000 CZK </div>
                             </div>
                         </div>
-                        <div class="col-6 col-lg-3 pl-lg-4 mt-3 homepage-card three">
+                        <div class="col-12 col-sm-6 col-md-6 col-lg-3 pl-lg-4 mt-3 homepage-card three">
                             <div class="homepage-card-wrapper">
                                 <div class="homepage-card-image"></div>
                                 <div class="homepage-card-title"> Doprava zdarma</div>
                                 <div class="homepage-card-text"> Pro objednávky nad 1000 CZK </div>
                             </div>
                         </div>
-                        <div class="col-6 col-lg-3 mt-3 homepage-card right-card four">
+                        <div class="col-12 col-sm-6 col-md-6 col-lg-3 mt-3 homepage-card right-card four">
                             <div class="homepage-card-wrapper">
                                 <div class="homepage-card-image"></div>
                                 <div class="homepage-card-title"> Doprava zdarma</div>
@@ -465,7 +463,7 @@
                             <div class="title-with-divider">
                                 <h3>Dostupné výrobky</h3>
                                 <div class="divider"></div>
-                                <div class="filtres">
+                                <div class="filtres featured-products-filtres">
                                     <a class="active" href="#">Vše</a>
                                     <a href="#">Ruční nářadí</a>
                                     <a href="#">Elektrické nářadí</a>
@@ -1311,14 +1309,15 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="title-with-divider">
-                            <h3>Populární kategorie</h3>
-                            <div class="divider"></div>
+                                <h3>Populární kategorie</h3>
+                                <div class="divider"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="container">
                     <div class="row categories-card-row card-version-two">
-                        <div class="col-6 col-lg-4 pl-0 pr-sm-0 pr-0 pr-lg-3 pr-md-3 mt-3  one categories-card">
+                        <div class="col-12 col-md-6 col-sm-6 col-lg-4 pl-3 pr-sm-0 pr-3 pr-lg-3 pr-md-3 mt-3  one categories-card">
                             <div class="categories-card-wrapper">
                                 <div class="categories-card-image-wrapper">
                                     <div class="categories-card-image"></div>
@@ -1329,7 +1328,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-lg-4 pl-0 pr-0 pr-lg-3  mt-3 categories-card two">
+                        <div class="col-12 col-md-6 col-sm-6 col-lg-4 pl-3 pr-3 pr-lg-3  mt-3 categories-card two">
                             <div class="categories-card-wrapper">
                                 <div class="categories-card-image-wrapper">
                                     <div class="categories-card-image"></div>
@@ -1340,7 +1339,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-lg-4 pl-0 mt-3 pr-0 pr-md-3 pr-sm-0 pr-lg-0  categories-card three">
+                        <div class="col-12 col-md-6 col-sm-6 col-lg-4 pl-3 mt-3 pr-3 pr-md-3 pr-sm-0 pr-lg-0  categories-card three">
                             <div class="categories-card-wrapper">
                                 <div class="categories-card-image-wrapper">
                                     <div class="categories-card-image"></div>
@@ -1351,7 +1350,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-lg-4 pl-0 pr-0 pr-lg-3 mt-3  one categories-card">
+                        <div class="col-12 col-md-6 col-sm-6 col-lg-4 pl-3 pr-3 pr-lg-3 mt-3  one categories-card">
                             <div class="categories-card-wrapper">
                                 <div class="categories-card-image-wrapper">
                                     <div class="categories-card-image"></div>
@@ -1362,7 +1361,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-lg-4 pl-0 mt-3 pr-sm-0 pr-0 pr-lg-3 pr-md-3 categories-card two">
+                        <div class="col-12 col-md-6 col-sm-6 col-lg-4 pl-3 mt-3 pr-sm-0 pr-3 pr-lg-3 pr-md-3 categories-card two">
                             <div class="categories-card-wrapper">
                                 <div class="categories-card-image-wrapper">
                                     <div class="categories-card-image"></div>
@@ -1373,7 +1372,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-lg-4 pl-0 pr-0 mt-3  categories-card three">
+                        <div class="col-12 col-md-6 col-sm-6 col-lg-4 pl-3 pr-3 pr-lg-0 mt-3  categories-card three">
                             <div class="categories-card-wrapper">
                                 <div class="categories-card-image-wrapper">
                                     <div class="categories-card-image"></div>
@@ -2437,7 +2436,7 @@
 
     <!--OwlCarousel-->
     <script src="js/owl.carousel.min.js"></script>
-    
+    <!--Carousel setting-->
     <script>
     //Homepage carousel
     $('.homepage-carousel').owlCarousel({
@@ -2544,6 +2543,11 @@
         nav: true,
         dots: false,
         responsive:{
+            0:{
+                items:1,
+                nav:true,
+                dots: false, 
+            },
             500:{
                 items:1,
                 nav:true,
@@ -2563,6 +2567,7 @@
         }
     })
     </script>
+    <!--OwlCarousel-->
     
 
 
