--- a/index.html
+++ b/index.html
@@ -1043,6 +1043,17 @@
                 </div>
             </article>
 
+            <!--Banner-->
+            <div class="container banner-container">
+                <div class="row h-100 align-items-center">
+                    <div class="col-12 banner text-center pt-4">
+                        <h1>Stovky pomocníků pro šikovné ruce</h1>
+                        <h5>Kladiva, vrtačky, pily, šroubováky...</h5>
+                        <a class="btn-standard" href=""> Koupit vše</a>
+                    </div>
+                </div>
+            </div>
+
             <!--Bestsellers article-->
             <article class="bestsellers-products w-100">
                 <div class="container mt-5 mb-5">
@@ -2348,6 +2359,42 @@
                     </div>
                 </div>
             </article>
+
+            <div class="container brand-container">
+                <div class="row">
+                    <div class="brand-item col-6 col-sm-4 col-md-3 col-lg-2 d-none d-lg-block">
+                        <a class="brand-link" href="#">
+                            <img class="img-fluid" src="images/logos/themeforest.png" alt="">
+                        </a>
+                    </div>
+                    <div class="brand-item col-6 col-sm-4 col-md-3 col-lg-2 d-sm-block d-md-block d-lg-block">
+                        <a class="brand-link" href="#">
+                            <img class="img-fluid" src="images/logos/codecanyon.png" alt="">
+                        </a>
+                    </div>
+                    <div class="brand-item col-6 col-sm-4 col-md-3 col-lg-2 d-none d-md-block d-lg-block">
+                        <a class="brand-link" href="#">
+                            <img class="img-fluid" src="images/logos/graphicriver.png" alt="">
+                        </a>
+                    </div>
+                    <div class="brand-item col-6 col-sm-4 col-md-3 col-lg-2 d-sm-block d-md-block d-lg-block">
+                        <a class="brand-link" href="#">
+                            <img class="img-fluid" src="images/logos/codecanyon.png" alt="">
+                        </a>
+                    </div>
+                    <div class="brand-item col-6 col-sm-4 col-md-3 col-lg-2 d-none d-lg-block">
+                        <a class="brand-link" href="#">
+                            <img class="img-fluid" src="images/logos/graphicriver.png" alt="">
+                        </a>
+                    </div>
+                    <div class="brand-item col-6 col-sm-4 col-md-3 col-lg-2 d-none d-sm-block d-md-block d-lg-block">
+                        <a class="brand-link" href="#">
+                            <img class="img-fluid" src="images/logos/themeforest.png" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+
         </section>
     </main>
       
