Dropdown hover zpoždění - pure css

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <div class="dropdown big-category-dropdown">
                                 <a class="btn navigation-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-bars"></i> Kategorie <i class="fas fa-chevron-down"></i> </a>
                                 <input class="menu-checkbox" type="checkbox" id="menu-checkbox">
-                                <div class="dropdown-menu">
+                                <div class="dropdown-menu big-menu">
                                         <label for="menu-checkbox" class="big-category-item dropdown-item" onclick="void(0)">Ruční nářadí
                                             <div class="big-category-menu double-col-dropdown" style="background-image: url('images/banner.jpg');">
                                                 <label class="big-menu-container-label" for="menu-checkbox" onclick="void(0)">
